bad/int_negation_overflow.example_compiler_output
ERROR
[1mbad/int_negation_overflow.lat:3:10: [1;31merror: [0;1minteger overflow while negating value: -2147483648[m
	int x = -(-2147483647 - 1);
	        [1;32m^[m
